# taskbook

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Dockerfile.client  Dockerfile.server  PLAN.md  README.md  devenv.nix  docker-compose.yml  flake.nix  install.sh  overlay.nix
.claude/: settings.local.json
.claude/agents/: reviewer.md  rust-dev.md  server-dev.md  tester.md  tui-dev.md
.github/workflows/: ci.yml  release.yml
crates/taskbook-client/: Cargo.toml
crates/taskbook-client/src/: api_client.rs  auth.rs  commands.rs  config.rs  credentials.rs  directory.rs  editor.rs  error.rs  main.rs  render.rs  taskbook.rs
crates/taskbook-client/src/storage/: local.rs  mod.rs  remote.rs
crates/taskbook-client/src/tui/: actions.rs  app.rs  autocomplete.rs  command_parser.rs  event.rs  input_handler.rs  mod.rs  theme.rs  ui.rs
crates/taskbook-client/src/tui/widgets/: board_picker.rs  board_view.rs  command_line.rs  help_popup.rs  input_dialog.rs  item_row.rs  journal_view.rs  mod.rs  status_bar.rs  timeline_view.rs
crates/taskbook-common/: Cargo.toml
crates/taskbook-common/src/: api.rs  board.rs  encryption.rs  error.rs  lib.rs
crates/taskbook-common/src/models/: item.rs  mod.rs  note.rs  task.rs
crates/taskbook-server/: Cargo.toml
crates/taskbook-server/src/: auth.rs  config.rs  db.rs  error.rs  main.rs  metrics_middleware.rs  middleware.rs  rate_limit.rs  router.rs  telemetry.rs
crates/taskbook-server/src/handlers/: events.rs  health.rs  items.rs  mod.rs  user.rs
crates/taskbook-server/src/migrations/: 001_initial.sql  002_add_session_index.sql
dashboards/: taskbook-server.json
docs/: README.md  cli-reference.md  configuration.md  installation.md  kubernetes.md  observability.md  server.md  sync.md
scripts/: release.sh
src/: board.rs  commands.rs  config.rs  error.rs  lib.rs  main.rs  render.rs  storage.rs  taskbook.rs
src/models/: item.rs  mod.rs  note.rs  task.rs
src/tui/: actions.rs  app.rs  event.rs  input_handler.rs  mod.rs  theme.rs  ui.rs
src/tui/widgets/: board_picker.rs  board_view.rs  help_popup.rs  input_dialog.rs  item_row.rs  mod.rs  status_bar.rs  timeline_view.rs
