[package]
name = "taskbook-server"
version = "1.0.0"
edition = "2021"
description = "Server for taskbook-rs sync"
license = "MIT"

[dependencies]
taskbook-common = { path = "../taskbook-common" }
axum = "0.7"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "migrate"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
argon2 = "0.5"
rand = "0.8"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
base64 = "0.22"

[[bin]]
name = "tb-server"
path = "src/main.rs"
